Version 2.03.06 - 
================================
  Use normal LVs for wiping of cachevols.
  Reload cleanered cache DM only with cleaner policy.
  Fix cmd return when zering of cachevol fails.
  Extend lvs to show all VDO properties.
  Preserve VDO write policy with vdopool.
  Increase default vdo bio threads to 4.
  Continue report when cache_status fails.
  Add support for DM_GET_TARGET_VERSION into device_mapper.
  Fix cmirrord usage of header files from device_mapper subdir.
  Allow standalone activation of VDO pool just like for thin-pools.
  Activate thin-pool layered volume as 'read-only' device.
  Ignore crypto devices with UUID signature CRYPT-SUBDEV.
  Enhance validation for thin and cache pool conversion and swapping.
  Improve internal removal of cached devices.
  Synchronize with udev when dropping snapshot.
  Add missing device synchronization point before removing pvmove node.
  Correctly set read_ahead for LVs when pvmove is finished.
  Remove unsupported OPTIONS+="event_timeout" udev rule from 11-dm-lvm.rules.
  Prevent creating VGs with PVs with different logical block sizes.
  Fix metadata writes from corrupting with large physical block size.

Version 2.03.05 - 15th June 2019
================================
  Fix command definition for pvchange -a.
  Add vgck --updatemetadata command that will repair metadata problems.
  Improve VG reading to work if one good copy of metadata is found.
  Report/display/scan commands that read VGs will no longer write/repair.
  Move metadata repairs from VG reading to VG writing.
  Add config setting md_component_checks to control MD component checks.
  Add end of device MD component checks when dev has no udev info.

Version 2.03.04 - 10th June 2019
================================
  Remove unused_duplicate_devs from cmd causing segfault in dmeventd.

Version 2.03.03 - 07th June 2019
================================
  Report no_discard_passdown for cache LVs with lvs -o+kernel_discards.